<resources>
    <string name="about">About</string>
    <string name="app_name">phyNODE</string>
    <string name="app_version">App version</string>
    <string name="buy_devices">Buy phyNODE devices</string>
    <string name="cancel">Cancel</string>
    <string name="change_settings">Change Settings</string>
    <string name="close">Close</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="department">Department</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="epaper_buffer">Writing data to ePaper&#8230;</string>
    <string name="epaper_init">Initiated ePaper</string>
    <string name="epaper_update">Updated ePaper</string>
    <string name="license">License</string>
    <string name="license_name">Apache License, Version 2.0</string>
    <string name="location_service_disabled">Location service is disabled</string>
    <string name="logo">Logo:</string>
    <string name="menuitem_load_image">Load image</string>
    <string name="menuitem_save_image">Save image</string>
    <string name="name">Name</string>
    <string name="no_devices_found">No Devices found yet</string>
    <string name="phynode_epaper_1">phyNODE-ePaper 1</string>
    <string name="phynode_athena">phyNODE-Athena</string>
    <string name="preference_file_key">de.phytec.iot.phynode.PREFERENCE_FILE_KEY</string>
    <string name="save_as_file">Save as file</string>
    <string name="saved_department">department</string>
    <string name="saved_device_addresses">device_addresses</string>
    <string name="saved_device_favourites">device_favourites</string>
    <string name="saved_device_names">device_names</string>
    <string name="saved_device_rssis">device_rssis</string>
    <string name="saved_name">name</string>
    <string name="saved_title">title</string>
    <string name="scan_start">Start Scan</string>
    <string name="scan_stop">Stop Scan</string>
    <string name="send">Send</string>
    <string name="sending">Sending&#8230;</string>
    <string name="services_discovered">Discovered services</string>
    <string name="source_code">Source Code</string>
    <string name="source_code_github">View on Github</string>
    <string name="source_code_link">https://github.com/PHYTEC-Messtechnik-GmbH/phynode-android-app</string>
    <string name="title">Title</string>
    <string name="issue_report">Report an Issue</string>
    <string name="issue_report_github">Having an issue or found a bug with this app? Report it on Github!</string>
    <string name="issue_report_link">https://github.com/PHYTEC-Messtechnik-GmbH/phynode-android-app/issues</string>
    <string-array name="device_name_filters">
        <item>phyNODE-ePaper</item>
        <item>phyNODE-KW41Z</item>
        <item>phyNODE-Athena</item>
    </string-array>
</resources>
