<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.phytec.iot.phynode.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/list_view_main"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/layout_placeholder"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon_placeholder"
            android:layout_height="96dp"
            android:src="@drawable/ic_developer_board"
            android:layout_width="96dp" />

        <TextView
            android:id="@+id/text_placeholder"
            android:paddingTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/no_devices_found" />

        <Button
            android:id="@+id/button_change_settings"
            android:layout_marginTop="16dp"
            android:text="@string/change_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        style="?android:buttonBarStyle"
        android:background="?android:colorBackground"
        android:clipToPadding="false"
        android:elevation="6dp"
        android:layout_gravity="bottom"
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ProgressBar
            android:id="@+id/progress_scan"
            android:layout_gravity="center"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/button_scan"
            android:layout_width="wrap_content" />

        <Button
            style="?android:buttonBarButtonStyle"
            android:id="@+id/button_scan"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:minWidth="120dp"
            android:text="@string/scan_start" />

    </RelativeLayout>

</LinearLayout>
